/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.mycompany.orbitix.modelo;

/**
 *
 * @author karla
 */
public enum TipoEquipaje {
    ARTICULO_PERSONAL,
    MALETA_MANO,
    MALETA_BODEGA
}