@startuml

note "Autoras: VALERIA CHAVEZ, ANDREA CUMBAL, KARLA GUANA, PAULA GRANDA, PAOLA PACHECO" as N1

package ORBITIX {

class Aerolinea {
  - nombre: String
  - vuelos: List<Vuelo>
  + Aerolinea(nombre: String)
  + agregarVuelo(v: Vuelo): void
  + listarVuelos(): List<Vuelo>
}

class Vuelo {
  - codigo: String
  - fecha: Date
  - hora: String
  - ruta: Ruta
  - avion: Avion
  - precio: double
  - asientosOcupados: Set<String>
  + Vuelo(codigo: String, fecha: Date, hora: String, ruta: Ruta, avion: Avion, precio: double)
  + Vuelo()
  + esAsientoDisponible(numeroAsiento: String): boolean
  + ocuparAsiento(numeroAsiento: String): void
  + getAsientosDisponibles(): int
}

class Avion {
  - modelo: String
  - capacidad: int
  - registroAeronualico: String
  + Avion(modelo: String, capacidad: int, registroAeronualico: String)
  + toString(): String
}

class Ruta {
  - origen: String
  - destino: String
  - duracion: double
  + Ruta(origen: String, destino: String, duracion: double)
  + getDuracionFormateada(): String
  + toString(): String
}

abstract class Usuario {
  # cedula: String
  # nombre: String
  # email: String
  # password: String
  + Usuario(cedula: String, nombre: String, email: String, password: String)
}

class Cliente {
  + Cliente(cedula: String, nombre: String, email: String, password: String)
  + toString(): String
}

class Compra {
  - codigo: String
  - fecha: Date
  - total: double
  - usuario: Usuario
  - pago: Pago
  - pasajes: List<Pasaje>
  + Compra(codigo: String, usuario: Usuario)
  + agregarPasaje(pasaje: Pasaje): void
  + recalcularTotal(): void
  + confirmarCompra(): boolean
  + setPago(pago: Pago): void
}

class Pago {
  - id: String
  - monto: double
  - fecha: Date
  - metodo: MetodoPago
  + Pago(id: String, monto: double, fecha: Date, metodo: MetodoPago)
  + procesarPago(): boolean
}

interface MetodoPago {
  + procesar(monto: double): boolean
}

class PagoTarjeta {
  + procesar(monto: double): boolean
}

class Pasaje {
  - codigo: String
  - precio: double
  - asiento: String
  - clase: ClaseAsiento
  - pasajero: Pasajero
  - vuelo: Vuelo
  - equipaje: Equipaje
  + Pasaje(codigo: String, precio: double, asiento: String, clase: ClaseAsiento, pasajero: Pasajero, vuelo: Vuelo, equipaje: Equipaje)
  + getRecargo(): double
}

class Pasajero {
  - cedula: String
  - nombre: String
  - apellido: String
  - telefono: String
  - email: String
  - edad: int
  + Pasajero(cedula: String, nombre: String, apellido: String, telefono: String, email: String, edad: int)
  + toString(): String
}

class Equipaje {
  - tipo: TipoEquipaje
  - costoExtra: double
  + Equipaje(tipo: TipoEquipaje)
  - calcularCostoExtra(): double
}

class HistorialVuelo {
  - cedulaUsuario: String
  - codigoVuelo: String
  - origen: String
  - destino: String
  - fecha: String
  - asiento: String
  - totalPagado: double
  + HistorialVuelo(...)
  + toLine(): String
  + fromLine(line: String): HistorialVuelo {static}
}

enum ClaseAsiento {
  ECONOMICA
  EJECUTIVA
  PRIMERA_CLASE
}

enum TipoEquipaje {
  ARTICULO_PERSONAL
  MALETA_MANO
  MALETA_BODEGA
}


Aerolinea "1" *-- "0..*" Vuelo
Vuelo "1" -- "1" Ruta
Vuelo "1" -- "1" Avion

Usuario <|-- Cliente

Compra "1" -- "1" Usuario
Compra "1" *-- "0..*" Pasaje
Compra "1" -- "0..1" Pago

Pago "1" -- "1" MetodoPago
MetodoPago <|.. PagoTarjeta

Pasaje "1" -- "1" Vuelo
Pasaje "1" -- "1" Pasajero
Pasaje "1" -- "0..1" Equipaje
Pasaje "1" -- "1" ClaseAsiento

Equipaje "1" -- "1" TipoEquipaje

}

@enduml
